# miller

./: .dir-locals.el  .ghci  .gitignore  LICENSE  README.md  basic.mac  cabal.project  miller.cabal  stack.yaml
app/: Main.hs
examples/: double.mac  pair.mac
src/: Doors.hs  Main.hs
src/Miller/: Expr.hs  Heap.hs  Parser.hs  Pretty.hs  Stats.hs  TI.hs  Token.hs  Typecheck.hs
src/Miller/TI/: Env.hs  Error.hs  Heap.hs  Machine.hs  Node.hs  Stack.hs
test/: Main.hs
