cabal-version:       2.2
name:                miller
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/patrickt/miller#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           Patrick Thomson
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared
  default-language: Haskell2010
  build-depends:    base >= 4.7 && < 5
                  , containers
                  , fused-effects
                  , generic-monoid
                  , hashable
                  , parsers
                  , prettyprinter
                  , recursion-schemes
                  , semilattices
                  , streams
                  , text
                  , trifecta
                  , unordered-containers

library
  import:              shared
  hs-source-dirs:      src
  default-extensions:  StrictData
  ghc-options:         -Werror -Wall
  exposed-modules:     Doors
                     , Miller.Expr
                     , Miller.Parser
                     , Miller.Stats
                     , Miller.TI
                     , Miller.TI.Heap


test-suite test
  import:         shared
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:  miller
