cabal-version:       2.2
name:                miller
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/patrickt/miller#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           Patrick Thomson
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared
  default-language: Haskell2010
  default-extensions: FlexibleContexts
  build-depends:    base >= 4.7 && < 5
                  , containers       ^>= 0.6.1
                  , fused-effects ^>= 0.5.0.0
                  , generic-monoid ^>= 0.1.0.0
                  , hashable ^>= 1.2.7
                  , parsers ^>= 0.12.9
                  , prettyprinter ^>= 1.2.1
                  , recursion-schemes ^>= 5.1
                  , semilattices ^>= 0.0.0.3
                  , streams ^>= 3.3
                  , text ^>= 1.2.3.1
                  , trifecta ^>= 2.1
                  , unordered-containers ^>= 0.2.10

library
  import:              shared
  hs-source-dirs:      src
  ghc-options:         -Wall -Werror
  exposed-modules:     Doors
                     , Miller.Expr
                     , Miller.Parser
                     , Miller.Pretty
                     , Miller.Stats
                     , Miller.TI
                     , Miller.TI.Env
                     , Miller.TI.Heap
                     -- , Miller.Typecheck


test-suite test
  import:         shared
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:  miller
                , trifecta
                , hedgehog >= 1
