cabal-version:       2.2
name:                miller
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/patrickt/miller#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Patrick Thomson
maintainer:          patrickt@github.com
copyright:           Patrick Thomson
category:            Web
build-type:          Simple
extra-source-files:  README.md

common shared
  default-language: GHC2024
  default-extensions: FlexibleContexts, GHC2024
  build-depends:    base >= 4.7 && < 5
                  , containers
                  , fused-effects
                  , fused-effects-optics
                  , generic-monoid
                  , hashable
                  , optics
                  , parsers
                  , prettyprinter
                  , recursion-schemes
                  , semilattices
                  , streams
                  , text
                  , trifecta == 2.1.4
                  , unordered-containers

library
  import:              shared
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Doors
                     , Miller.Expr
                     , Miller.Parser
                     , Miller.Pretty
                     , Miller.Stats
                     , Miller.TI
                     , Miller.TI.Env
                     , Miller.TI.Heap
                     , Miller.TI.Stack
                     -- , Miller.Typecheck

executable runmiller
  import: shared
  hs-source-dirs: app
  main-is: Main.hs
  ghc-options: -Wall
  build-depends: miller
               , optparse-applicative
               , optparse-generic

test-suite miller-test
  import:         shared
  hs-source-dirs: test
  type:           exitcode-stdio-1.0
  main-is:        Main.hs
  build-depends:  miller
                , trifecta == 2.1.4
                , hedgehog >= 1
